force-app/main/default/objects/Detail__c/Detail__c.object-meta.xml
<CustomObject>
    <label>明細</label>
    <nameField>
        <label>表示用テキスト</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>