force-app/main/default/objects/Detail__c/fields/CreditWC__c.field-meta.xml
<CustomField>
    <fullName>CreditWC__c</fullName>
    <label>WC単価</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>