force-app/main/default/objects/Detail__c/fields/CreditWeight__c.field-meta.xml
<CustomField>
    <fullName>CreditWeight__c</fullName>
    <label>単位重量</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>