force-app/main/default/objects/Detail__c/fields/DetailCategory__c.field-meta.xml
<CustomField>
    <fullName>DetailCategory__c</fullName>
    <label>明細種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕様</fullName>
            </value>
            <value>
                <fullName>筐体</fullName>
            </value>
            <value>
                <fullName>明細</fullName>
            </value>
            <value>
                <fullName>手入力</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>