force-app/main/default/objects/Detail__c/fields/DetailCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>DetailCategoryCode__c</fullName>
    <formula>CASE( DetailCategory__c , 
    &quot;仕様&quot; , &quot;1&quot;,
    &quot;筐体&quot; , &quot;2&quot;,
    &quot;明細&quot; , &quot;3&quot;,
    &quot;手入力&quot; , &quot;4&quot;, &quot;9&quot;)</formula>
    <label>明細種別コード</label>
    <type>Text</type>
</CustomField>