force-app/main/default/objects/Detail__c/fields/DetailRecordDisplayNumber__c.field-meta.xml
<CustomField>
    <fullName>DetailRecordDisplayNumber__c</fullName>
    <label>明細レコード表示順(数式)</label>
    <length>14</length>
    <type>Text</type>
</CustomField>