force-app/main/default/objects/Detail__c/fields/DetailRecordDisplayNumberText__c.field-meta.xml
<CustomField>
    <fullName>DetailRecordDisplayNumberText__c</fullName>
    <description>明細レコード表示順をマスタに入れていただいた際に、その値を保持し、明細入力画面に表示する項目</description>
    <label>明細レコード表示順</label>
    <length>255</length>
    <type>Text</type>
</CustomField>