force-app/main/default/objects/Detail__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>見積項目</label>
    <referenceTo>Device__c</referenceTo>
    <relationshipLabel>明細</relationshipLabel>
    <relationshipName>Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>