force-app/main/default/objects/Detail__c/fields/MajorClassificationName__c.field-meta.xml
<CustomField>
    <fullName>MajorClassificationName__c</fullName>
    <label>大分類名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>