force-app/main/default/objects/Detail__c/fields/MasterCode__c.field-meta.xml
<CustomField>
    <fullName>MasterCode__c</fullName>
    <label>マスタコード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>