force-app/main/default/objects/Detail__c/fields/MinorClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>MinorClassificationCode__c</fullName>
    <label>小分類コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>