force-app/main/default/objects/Detail__c/fields/Name10__c.field-meta.xml
<CustomField>
    <fullName>Name10__c</fullName>
    <label>名称10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>