force-app/main/default/objects/Detail__c/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <label>名称2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>