force-app/main/default/objects/Detail__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>並び順</label>
    <length>10</length>
    <type>Text</type>
</CustomField>