force-app/main/default/objects/Detail__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>IF( NOT(ISNULL( WcCoefficient__c ) )
, IF(ISNULL(CreditWC__c ),0,CreditWC__c ) * WcCoefficient__c * Quantity__c * IF( Name1__c = &quot;ソフトウェア(画面/帳票作成)&quot;,1.2 , 1)
, UnitPrice__c * IF(ISNULL(UnitPriceCoefficient__c),1,UnitPriceCoefficient__c) * Quantity__c * IF( Name1__c = &quot;ソフトウェア(画面/帳票作成)&quot;,1.2 , 1)
)</formula>
    <label>金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>