force-app/main/default/objects/Detail__c/fields/PriceCoefficient__c.field-meta.xml
<CustomField>
    <fullName>PriceCoefficient__c</fullName>
    <formula>Device__r.PriceCoefficient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>価格係数</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>