force-app/main/default/objects/Detail__c/fields/PricingTable__c.field-meta.xml
<CustomField>
    <fullName>PricingTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>価格表</label>
    <referenceTo>PricingTable__c</referenceTo>
    <relationshipName>Details</relationshipName>
    <type>Lookup</type>
</CustomField>