force-app/main/default/objects/Detail__c/fields/PricingTableUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>PricingTableUniqueKey__c</fullName>
    <label>価格表ユニークキー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>