force-app/main/default/objects/Detail__c/fields/ProvisionPrice__c.field-meta.xml
<CustomField>
    <fullName>ProvisionPrice__c</fullName>
    <formula>ProvisionUnitPrice__c  *  Quantity__c</formula>
    <label>提供価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>