force-app/main/default/objects/Detail__c/fields/ProvisionUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ProvisionUnitPrice__c</fullName>
    <label>提供単価</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>