force-app/main/default/objects/Detail__c/fields/RECNO__c.field-meta.xml
<CustomField>
    <fullName>RECNO__c</fullName>
    <label>RECNO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>