force-app/main/default/objects/Detail__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>単価</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>