force-app/main/default/objects/Detail__c/fields/UnitPriceCoefficient__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceCoefficient__c</fullName>
    <label>単価係数</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>