force-app/main/default/objects/Detail__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <formula>CreditWC__c *  Quantity__c</formula>
    <label>WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>