force-app/main/default/objects/Detail__c/fields/WcCalculationRate__c.field-meta.xml
<CustomField>
    <fullName>WcCalculationRate__c</fullName>
    <label>WC算出レート</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>