force-app/main/default/objects/Detail__c/fields/WcCoefficient__c.field-meta.xml
<CustomField>
    <fullName>WcCoefficient__c</fullName>
    <label>WC係数</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>