force-app/main/default/objects/Detail__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <formula>CreditWeight__c  *  Quantity__c</formula>
    <label>重量</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>