force-app/main/default/objects/Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name2__c</columns>
    <columns>Name3__c</columns>
    <columns>Device__c</columns>
    <columns>PricingTable__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name1__c</field>
        <operation>equals</operation>
        <value>EVT・GPTユニット</value>
    </filters>
    <label>すべて選択</label>
</ListView>